add google analytics id

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 disqusShortname = ""
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-118387777-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
